fixing spacing

--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -285,6 +285,8 @@
 				width: 115px;
 				height: 24px;
 
+				margin-top: 8px;
+
 				.add-icons {
 					gap: 6px;
 
